# prototype

./: .dockerignore  .gitignore  Dockerfile  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_old.txt
.github/workflows/: deploy.yml
src/api/: schemas.py  server.py
src/bot/: handlers.py  telegram_bot.py
src/config/: settings.yaml
src/core/: model_loader.py  utils.py
src/experiments/: verify_chat.py
src/experiments/datasets/: loader.py
src/tests/: api_test.py  torch_test.py
